--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
     <script src="js/services/srvAnalytics.js"></script>
     <script src="js/services/srvConfig.js"></script>
     <script src="js/services/srvDataContainer.js"></script>
-    <script src="js/services/data/srvData.pouchdb.js"></script>
+    <script src="js/services/srvData.pouchdb.js"></script>
     <script src="js/services/a4p/a4p.js"></script>
     <script src="js/services/a4p/a4p.all.js"></script>
     <script src="js/services/a4p/a4p.json.js"></script>
