--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,8 @@
     <script src="js/services/srvConfig.js"></script>
     <script src="js/services/srvDataContainer.js"></script>
     <script src="js/services/srvData.pouchdb.js"></script>
+    <script src="js/services/srvMiapp.js"></script>
+    <script src="js/miapp.iu.js"></script>
     <script src="js/services/a4p/a4p.js"></script>
     <script src="js/services/a4p/a4p.all.js"></script>
     <script src="js/services/a4p/a4p.json.js"></script>
