--- a/www/index.html
+++ b/www/index.html
@@ -25,40 +25,18 @@
         <script src="lib/angular-chart.js/dist/angular-chart.js"></script>
         <script src="lib/crypto-js/crypto-js.js"></script>
 
-<<<<<<< HEAD
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/config/config.js"></script>
-    <script src="js/directives/navigation.js"></script>
-    <script src="js/directives/directives.js"></script>
-    <script src="js/filters/filters.js"></script>
-    <script src="js/languages/translation.js"></script>
-    <script src="js/services/services.js"></script>
-    <script src="js/services/srvAnalytics.js"></script>
-    <script src="js/services/srvConfig.js"></script>
-    <script src="js/services/srvMiapp.js"></script>
-    <script src="js/services/srvDataContainer.js"></script>
-    <script src="js/services/data/srvData.pouchdb.js"></script>
-    <script src="js/services/a4p/a4p.js"></script>
-    <script src="js/services/a4p/a4p.all.js"></script>
-    <script src="js/services/a4p/a4p.json.js"></script>
-    <script src="js/services/a4p/a4p.log.js"></script>
-    <script src="js/services/a4p/a4p.xml.js"></script>
-    <script src="js/services/a4p/a4p.storage.js"></script>
-=======
         <!--
         <script src="lib/ng-chartjs/dist/angular-chartjs.js"></script>
         <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
         -->
         <script src="js/miapp.iu.js"></script>
->>>>>>> d20fbc74b6145eb9c712457236ad6141c70058ba
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
 
         <!-- your app's js -->
         <script src="js/app.js"></script>
-        <script src="js/config/config.js"></script>
+        <script src="js/config/.config.js"></script>
         <script src="js/directives/navigation.js"></script>
         <script src="js/directives/directives.js"></script>
         <script src="js/filters/filters.js"></script>
