--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
         <script src="lib/ng-chartjs/dist/angular-chartjs.js"></script>
         <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
         -->
-        <script src="js/miapp.iu.js"></script>
+        <script src="lib/miappio-sdk/dist/miapp.io.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
@@ -46,14 +46,7 @@
         <script src="js/services/srvConfig.js"></script>
         <script src="js/services/srvDataContainer.js"></script>
         <script src="js/services/srvData.pouchdb.js"></script>
-        <script src="js/services/srvMiapp.js"></script>
-        <script src="js/miapp.iu.js"></script>
-        <script src="js/services/a4p/a4p.js"></script>
-        <script src="js/services/a4p/a4p.all.js"></script>
-        <script src="js/services/a4p/a4p.json.js"></script>
-        <script src="js/services/a4p/a4p.log.js"></script>
-        <script src="js/services/a4p/a4p.xml.js"></script>
-        <script src="js/services/a4p/a4p.storage.js"></script>
+
 
         <script src="views/views.js"></script>
         <script src="views/controllers.js"></script>
