--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
         <script src="lib/Chart.js/Chart.js"></script>
         <script src="lib/angular-chart.js/dist/angular-chart.css"></script>
         <script src="lib/angular-chart.js/dist/angular-chart.js"></script>
-        <script src="lib/crypto-js/crypto-js.js"></script>
+        <!--<script src="lib/crypto-js/crypto-js.js"></script>-->
 
         <!--
         <script src="lib/ng-chartjs/dist/angular-chartjs.js"></script>
