--- a/www/index.html
+++ b/www/index.html
@@ -29,14 +29,14 @@
         <script src="lib/ng-chartjs/dist/angular-chartjs.js"></script>
         <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
         -->
-        <script src="lib/miappio-sdk/dist/miapp.io.js"></script>
+      <script src="lib/miappio-sdk/dist/miappio.sdk.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
 
         <!-- your app's js -->
         <script src="js/app.js"></script>
-        <script src="js/config/.config.js"></script>
+      <script src="js/config/config.js"></script>
         <script src="js/directives/navigation.js"></script>
         <script src="js/directives/directives.js"></script>
         <script src="js/filters/filters.js"></script>
