--- a/www/index.html
+++ b/www/index.html
@@ -8,32 +8,22 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <!--<link href="css/animate.css" rel="stylesheet">
-    <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">-->
-    <link href="css/style.css" rel="stylesheet">
-
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- ionic/angularjs js -->
-
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/angular-gettext/dist/angular-gettext.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
+    <script src="lib/angular-gettext/dist/angular-gettext.min.js"></script>
     <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
     <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
     <script src="lib/chance/dist/chance.min.js"></script>
-    <script src="lib/Chart.js/Chart.js"></script>
+    <script src="lib/Chart.js/Chart.min.js"></script>
     <script src="lib/angular-chart.js/dist/angular-chart.css"></script>
-    <script src="lib/angular-chart.js/dist/angular-chart.js"></script>
-    <!--<script src="lib/crypto-js/crypto-js.js"></script>-->
+    <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
 
-    <!--
-    <script src="lib/ng-chartjs/dist/angular-chartjs.js"></script>
-    <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
-    -->
-    <script src="lib/miappio-sdk/dist/miappio.sdk.min.js"></script>
-
+    <!-- miapp.io sdk -->
+    <script src="lib/miappio-sdk/dist/miappio.sdk.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
