--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,6 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.min.js"></script>
@@ -21,6 +19,11 @@
     <script src="lib/Chart.js/Chart.min.js"></script>
     <script src="lib/angular-chart.js/dist/angular-chart.css"></script>
     <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
+
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
+
 
     <!-- miapp.io sdk -->
     <script src="lib/miappio-sdk/dist/miappio.sdk.js"></script>
