lang done style refreshed minor bugs on views

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,8 @@
     <script src="js/directives/navigation.js"></script>
     <script src="js/directives/directives.js"></script>
     <script src="js/filters/filters.js"></script>
-    <script src="js/languages/translation.js"></script>
+    <script src="js/languages/en_US.js"></script>
+    <script src="js/languages/fr_FR.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/services/srvAnalytics.js"></script>
     <script src="js/services/srvConfig.js"></script>
