cleanator-6 Cleanator : enlarge todo list with "next" list

--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="format-detection" content="telephone=no">
     <title></title>
 
     <link rel="manifest" href="manifest.json">
@@ -38,6 +39,7 @@
     <script src="js/services/services.js"></script>
     <script src="js/services/srvNavigation.js"></script>
     <script src="js/services/srvAnalytics.js"></script>
+    <script src="js/services/srvArray.js"></script>
     <script src="js/services/srvConfig.js"></script>
     <script src="js/services/srvDataContainer.js"></script>
     <script src="js/services/srvData.pouchdb.js"></script>
